# redi

./: LICENSE  README.ja.md  README.md  compose.yaml  pyproject.toml  taskfile.yaml
.claude/skills/dogfooding-redi/: SKILL.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml  release.yml
doc/: setup-redmine-for-test.md
script/: init-redmine-dogfooding.sh  init-redmine.sh
src/redi/: __init__.py  attachment.py  cache.py  cli.py  client.py  config.py  custom_field.py  enumeration.py  issue.py  issue_relation.py  issue_status.py  project.py  query.py  role.py  search.py  ticket.py  time_entry.py  tracker.py  tui.py  user.py  version.py  wiki.py
src/redi/api/: attachment.py  custom_field.py  file.py  group.py  issue.py  issue_category.py  issue_relation.py  me.py  membership.py  news.py  project.py  role.py  search.py  time_entry.py  user.py  version.py  wiki.py
src/redi/cli/: __init__.py  _common.py  attachment_command.py  config_command.py  enumerations_command.py  file_command.py  group_command.py  init_command.py  issue_category_command.py  issue_command.py  main.py  me_command.py  membership_command.py  news_command.py  project_command.py  prompt_util.py  relation_command.py  role_command.py  search_command.py  time_entry_command.py  user_command.py  version_command.py  wiki_command.py
src/redi/i18n/: __init__.py  _protocol.py  en.py  ja.py
src/redi/tui/: __init__.py  app.py  issue_tab.py  render.py  state.py  tab.py  time_entry_tab.py  wiki_tab.py
tests/: conftest.py
tests/e2e/: test_attachment_cli.py  test_custom_field_cli.py  test_document_category_cli.py  test_file_cli.py  test_group_cli.py  test_issue_category_cli.py  test_issue_cli.py  test_issue_priority_cli.py  test_issue_status_cli.py  test_me_cli.py  test_membership_cli.py  test_news_cli.py  test_project_cli.py  test_query_cli.py  test_relation_cli.py  test_role_cli.py  test_search_cli.py  test_time_entry_activity_cli.py  test_time_entry_cli.py  test_tracker_cli.py  test_user_cli.py  test_version_cli.py  test_wiki_cli.py  utils.py
tests/unit/: test_cache.py  test_config.py  test_confirm_delete.py  test_i18n.py  test_issue_filter.py  test_issue_status_hint.py  test_prompt_util.py
