[project]
name = "redtile"
version = "0.0.17"
description = "Redmine CLI tool"
readme = "README.md"
authors = [
    { name = "kawagh", email = "kawagh.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "argcomplete>=3.6.3",
    "prompt-toolkit>=3.0.52",
    "requests>=2.33.1",
    "tomlkit>=0.14.0",
    "wcwidth>=0.2.13",
]

[project.scripts]
redi = "redi.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.31",
]

[tool.uv.build-backend]
module-name = "redi"
