[project]
name = "redtile"
version = "0.0.24"
description = "Redmine CLI tool"
readme = "README.md"
authors = [
    { name = "kawagh", email = "kawagh.dev@gmail.com" }
]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "argcomplete>=3.6.3",
    "prompt-toolkit>=3.0.52",
    "requests>=2.33.1",
    "tomlkit>=0.14.0",
    "wcwidth>=0.2.13",
]

[project.urls]
Homepage = "https://github.com/kawagh/redi"
Repository = "https://github.com/kawagh/redi"
Issues = "https://github.com/kawagh/redi/issues"

[project.scripts]
redi = "redi.cli:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "ty>=0.0.31",
]

[tool.uv.build-backend]
module-name = "redi"

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
  "e2e: E2E test (needs Redmine initialized by script/init-redmine.sh)",
]
addopts = "-m 'not e2e'"
